--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,11 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_firebase_chat_core: ^1.6.7
+  flutter_slider_drawer: ^2.1.3
   fluttertoast: ^8.2.2
-  http: ^0.13.4
+  google_fonts: ^6.1.0
   html: ^0.15.0
+  http: 1.1.0
   table_calendar: ^3.0.9
 
 dev_dependencies:
@@ -59,6 +61,9 @@ flutter:
   assets:
     - assets/willy.JPG
     - assets/logo.png
+    - assets/background_login.png
+    - assets/background_signup.png
+    - assets/background_home.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
