--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  carousel_slider: ^4.2.1
   cloud_firestore: ^4.8.2
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.12.0
@@ -36,11 +37,13 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_firebase_chat_core: ^1.6.7
+  flutter_riverpod: ^2.4.9
   flutter_slider_drawer: ^2.1.3
   fluttertoast: ^8.2.2
   google_fonts: ^6.1.0
   html: ^0.15.0
   http: 1.1.0
+  riverpod: ^2.4.9
   table_calendar: ^3.0.9
 
 dev_dependencies:
@@ -64,6 +67,10 @@ flutter:
     - assets/background_login.png
     - assets/background_signup.png
     - assets/background_home.png
+    - assets/background_all.png
+    - assets/1.png
+    - assets/2.png
+    - assets/3.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
