--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_slider_drawer: ^2.1.3
   fluttertoast: ^8.2.2
   google_fonts: ^6.1.0
+  google_sign_in: ^6.2.1
   html: ^0.15.0
   http: 1.1.0
   riverpod: ^2.4.9
