--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   google_sign_in: ^6.2.1
   html: ^0.15.0
   http: 1.1.0
+  image: ^4.1.3
+  image_cropper: ^5.0.1
+  image_picker: ^1.0.5
   riverpod: ^2.4.9
   table_calendar: ^3.0.9
 
@@ -69,6 +72,7 @@ flutter:
     - assets/background_signup.png
     - assets/background_home.png
     - assets/background_all.png
+    - assets/background_splash.png
     - assets/1.png
     - assets/2.png
     - assets/3.png
