--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  advance_pdf_viewer2: ^2.0.5+1
   carousel_slider: ^4.2.1
   cloud_firestore: ^4.13.6
   cupertino_icons: ^1.0.2
@@ -36,6 +37,7 @@ dependencies:
   firebase_storage: ^11.4.0
   flutter:
     sdk: flutter
+  flutter_cached_pdfview: ^0.4.2
   flutter_firebase_chat_core: ^1.6.7
   flutter_riverpod: ^2.4.9
   flutter_slider_drawer: ^2.1.3
@@ -47,8 +49,12 @@ dependencies:
   image: ^4.1.3
   image_cropper: ^5.0.1
   image_picker: ^1.0.5
+  intl: 0.18.1
+  provider: ^6.1.1
   riverpod: ^2.4.9
   table_calendar: ^3.0.9
+  theme_provider: ^0.6.0
+  url_launcher: ^6.2.3
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -76,6 +82,8 @@ flutter:
     - assets/1.png
     - assets/2.png
     - assets/3.png
+    - assets/pdf/GDG_Bandung_Proposal_DevFest2023.pdf
+    - assets/pdf/Proposal_INTEGER_2022.pdf
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
