--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_riverpod: ^2.4.9
   flutter_slider_drawer: ^2.1.3
   fluttertoast: ^8.2.2
+  get: ^4.6.6
   google_fonts: ^6.1.0
   google_sign_in: ^6.2.1
   html: ^0.15.0
@@ -87,6 +88,14 @@ flutter:
     - assets/instagram.jpeg
     - assets/pdf/GDG_Bandung_Proposal_DevFest2023.pdf
     - assets/pdf/Proposal_INTEGER_2022.pdf
+    - assets/proker/proker1.JPG
+    - assets/proker/proker2.JPG
+    - assets/proker/proker3.JPG
+    - assets/proker/proker4.JPG
+    - assets/proker/proker5.JPG
+    - assets/proker/proker6.png
+    - assets/proker/proker7.jpg
+    - assets/proker/proker8.JPG
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
