--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   image_cropper: ^5.0.1
   image_picker: ^1.0.5
   intl: 0.18.1
+  path_provider: ^2.1.2
   provider: ^6.1.1
   riverpod: ^2.4.9
   table_calendar: ^3.0.9
